# start-hack-2024

./: .gitignore  README.md  druid.db-journal  druid_example.db  hello_hackers.py  pyproject.toml
.streamlit/: config.toml
src/app/data/: competencies.py  lehrplan-21-kanton-st-gallen (copy).csv  lehrplan-21-kanton-st-gallen.csv
src/app/streamlit_app/: Home.py  database.py  graph.py  utils.py  🏠Home.py
src/app/streamlit_app/pages/: 1_◾️_Add Your Test.py  1_➕_Add Your Test.py  2.002_✅_Evaluate Your Test.py  2.01_✅_Evaluate Your Test.py  2_◾️_Evaluate Your Test.py  2_✅_Evaluate Your Test.py  3_◾️_Student_Dashboard.py  3_📈_Student_Dashboard.py  Add Your Test.py  Evaluate Your Test.py  Our Database.py  Student Dashboard.py  Student Progress.py  Test Grading.py  Test Input.py  graph.py
